[gd_scene load_steps=11 format=3 uid="uid://stw84igpwnme"]

[ext_resource type="Script" uid="uid://dkoc06h8svoav" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://dqj72a0prvami" path="res://sprites/Sprite-0002-Sheet.png" id="2_g2els"]
[ext_resource type="AudioStream" uid="uid://namko1k8ganw" path="res://music/splash1.wav" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://ch4f4e7nrudtm" path="res://music/splash2.wav" id="4_dqkch"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("2_g2els")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_g2els")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qlg0r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}],
"loop": true,
"name": &"swim",
"speed": 2.5
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tuyoq"]
radius = 32.6531
height = 110.204

[node name="Player" type="Area2D"]
z_index = 1
scale = Vector2(0.7, 0.7)
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_qlg0r")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.73472e-18, 1.42857)
scale = Vector2(0.7, 0.7)
shape = SubResource("CapsuleShape2D_tuyoq")

[node name="RippleEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")
volume_db = -5.0

[node name="DashEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")
volume_db = -6.0
pitch_scale = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
